application-cicd/deploy/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rest-example
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: rest-example
        image: rest-example:version
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
